Fix extra margin for experience on resume page

--- a/style.css
+++ b/style.css
@@ -225,7 +225,6 @@ img {
   background-color: var(--text-box-bg-color);
   padding: 0.666em;
   margin-top: 0.666em;
-  margin-bottom: 0.666em;
 }
 
 #resume #skills ul {
